# backend-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: agent.py
app/common/util/: hybrid_search_client.py  llm_gateway_client.py  request.py  search_client.py
app/core/: config.py  security.py
app/core/error/: error_handler.py  service_exception.py
app/core/log/: logging.py  logging_config.yaml
app/core/middleware/: phoenix.py
app/infra/database/: base.py  database.py
app/infra/database/repository/: agent_log.py
app/infra/database/schema/: agent_log.py
app/service/agent/: __init__.py  base.py  registry.py
app/service/agent/mentor/v1/: agent.py  graph.py  prompts.py  state.py
app/service/agent/mentor/v1/prompts/: __init__.py  classifier.py  generator.py  grader.py  rewriter.py  validator.py
app/service/agent/rag/v1/: agent.py  prompts.py
app/service/agent/rag/v2/: agent.py  graph.py  prompts.py
app/service/agent/rag/v3/: agent.py  graph.py  prompts.py
app/service/model/: agent.py  user.py
