[project]
name = "agent"
version = "0.0.1"
description = "Agent service - RAG, tool execution, background tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0",
    "azure-search-documents>=11.6.0",
    "bcrypt==4.3.0",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.4",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.3",
    "psycopg2-binary>=2.9.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "types-requests>=2.32.4.20260107",
    "arize-phoenix>=13.0.0",
    "openinference-instrumentation-langchain>=0.1.50",
    "opentelemetry-exporter-otlp>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
